# ev3base_pkg

./: CMakeLists.txt  notes.txt  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
devel/: .catkin  .rosinstall  setup.sh
ev3/include/: ev3base.h
ev3/include/old_lib/configuration_node/: DeactivateNodes.h  GetConfigurableNodes.h  GetNodesDetails.h  GetRobots.h  ImportScenarios.h  NodesStatus.h  RemoveScenarios.h  SaveConfiguration.h  Shutdown.h  StaticTransform.h
ev3/include/old_lib/euclid_odom/: Status.h
ev3/include/old_lib/euclid_rover5_pkg/: Encoder.h
ev3/include/old_lib/network_manager/: CsGetSavedNetworks.h
ev3/include/old_lib/realsense_person/: BoundingBox.h  PersonTracking.h
ev3/include/old_lib/realsense_sp/: Reset.h
ev3/include/old_lib/rtabmap_ros/: OdomInfo.h
ev3/include/old_lib/system_monitor/: USBStatus.h
ev3/include/ros_lib/configuration_node/: ActivateNodes.h  CreateScenario.h  DeleteNode.h  EditNode.h  EditScenario.h  ExportScenarios.h  FindLaunchFiles.h  FindRunningNodes.h  GenerateArduinoLibrary.h  GetDefaultScenario.h  GetLaunchFilePath.h  GetOOBENodes.h  GetParams.h  Param.h  (+19 more)
ev3/src/: ev3base.cpp
include/: ev3geometry.h
launch/: camera.launch  gmapping.launch  laser_scan.launch  move_base.launch  rtabmap_mapping.launch  start_ev3base.launch  start_ev3base_ekf.launch
maps/: endhall_map.pgm  endhall_map.yaml  home_office_map.pgm  home_office_map.yaml  my_map (copy).pgm  my_map.yaml  ship_cube.pgm  ship_cube.yaml
msg/: Encoder.msg
src/: ev3base_node.cpp  ev3base_node.h
(+37 files in other folders)
